[gd_scene load_steps=5 format=3 uid="uid://dyki2nuvujpnh"]

[ext_resource type="Theme" uid="uid://dffh2dsnqddfy" path="res://UI/default_theme.tres" id="1_62fa1"]
[ext_resource type="PackedScene" uid="uid://btnxouy0sw0nr" path="res://UI/value_bar.tscn" id="2_l4s6b"]
[ext_resource type="Script" path="res://UI/elizabeth_stats.gd" id="2_o3eb6"]
[ext_resource type="Texture2D" uid="uid://vypkxvma5elc" path="res://WestwickAssets/Sprites/ExperienceBar.png" id="3_hxp5g"]

[node name="ElizabethStats" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_62fa1")
script = ExtResource("2_o3eb6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name : Pilgrim"

[node name="Level" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level : "

[node name="Attack" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack : "

[node name="Defense" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Defense :"

[node name="Health" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Health"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health :"

[node name="HealthBar" parent="MarginContainer/VBoxContainer/Health" instance=ExtResource("2_l4s6b")]
unique_name_in_owner = true
layout_mode = 2

[node name="Decrease" parent="MarginContainer/VBoxContainer/Health/HealthBar" index="0"]
offset_top = 4.0

[node name="Increase" parent="MarginContainer/VBoxContainer/Health/HealthBar" index="1"]
offset_top = 4.0

[node name="Actual" parent="MarginContainer/VBoxContainer/Health/HealthBar" index="2"]
offset_top = 4.0

[node name="Experience" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Experience"]
layout_mode = 2
text = "Experience : "

[node name="ExperienceBar" parent="MarginContainer/VBoxContainer/Experience" instance=ExtResource("2_l4s6b")]
unique_name_in_owner = true
layout_mode = 2

[node name="Decrease" parent="MarginContainer/VBoxContainer/Experience/ExperienceBar" index="0"]
visible = false

[node name="Increase" parent="MarginContainer/VBoxContainer/Experience/ExperienceBar" index="1"]
visible = false

[node name="Actual" parent="MarginContainer/VBoxContainer/Experience/ExperienceBar" index="2"]
offset_top = 4.0
texture_progress = ExtResource("3_hxp5g")

[editable path="MarginContainer/VBoxContainer/Health/HealthBar"]
[editable path="MarginContainer/VBoxContainer/Experience/ExperienceBar"]
